--- a/src/styles/Compra.css
+++ b/src/styles/Compra.css
@@ -147,7 +147,7 @@
  }
 
  .ButtonGasContainer {
-     width: 60%;
+     width: 100%;
      display: flex;
      align-items: center;
      justify-content: center;
@@ -230,7 +230,7 @@
  }
 
  .ButtonAddCarrinho {
-     width: 50%;
+     width: 100px;
      height: 40px;
 
      border: none;
