--- a/src/styles/Compra.css
+++ b/src/styles/Compra.css
@@ -151,6 +151,7 @@
      display: flex;
      align-items: center;
      justify-content: center;
+    cursor: pointer;
 
  }
 
@@ -169,6 +170,7 @@
      display: flex;
      align-items: center;
      justify-content: center;
+
 
  }
 
@@ -241,6 +243,7 @@
 
      margin-top: 40px;
      margin-bottom: 20px;
+    cursor: pointer;
  }
 
  .storeContainer {
@@ -275,6 +278,7 @@
      background: #5F9DF7;
      border-radius: 50px;
      color: #ffffff;
+    cursor: pointer;
  }
 
  .TitleButton {
