--- a/src/styles/cadastro.css
+++ b/src/styles/cadastro.css
@@ -56,6 +56,7 @@
             font-family: 'Roboto', sans-serif;
             font-size: 18px;
             background: #E1E1E8;
+            cursor: pointer;
 
         }
 
@@ -71,6 +72,7 @@
             font-family: 'Roboto', sans-serif;
             font-size: 18px;
             background: #E1E1E8;
+            cursor: pointer;
 
         }
 
@@ -145,6 +147,7 @@
             background: #5F9DF7;
             border-radius: 50px;
             color: #ffffff;
+            cursor: pointer;
         }
 
         .TitleButton {
