--- a/src/styles/cadastrolocation.css
+++ b/src/styles/cadastrolocation.css
@@ -49,7 +49,7 @@
 
  .ImageContainer {
      width: 100%;
-     height: 50vh;
+     height: 30vh;
      display: flex;
      align-items: center;
      justify-content: center;
@@ -99,6 +99,16 @@
  .checkbox {
      display: flex;
      gap: 2px;
+     font-weight: bold;
+     color: #47474D;
+    
+ }
+
+ .inputCheckbox{
+    width: 20px;
+    accent-color: #5F9DF7;
+    color: #FFFFFF;
+    cursor: pointer;
  }
 
  select {
@@ -115,6 +125,7 @@
      font-size: 18px;
      background: #E1E1E8;
      color: #47474D;
+    cursor: pointer;
 
 
 
@@ -133,6 +144,7 @@
      font-family: 'Roboto', sans-serif;
      font-size: 18px;
      background: #E1E1E8;
+
 
      @media (max-width: 720px; ) {
          width: 50%;
@@ -186,6 +198,7 @@
      background: #5F9DF7;
      border-radius: 50px;
      color: #ffffff;
+    cursor: pointer;
  }
 
  .TitleButton {
