--- a/src/styles/cadastrolocation.css
+++ b/src/styles/cadastrolocation.css
@@ -49,7 +49,7 @@
 
  .ImageContainer {
      width: 100%;
-     height: 30vh;
+     height: 50vh;
      display: flex;
      align-items: center;
      justify-content: center;
@@ -59,16 +59,17 @@
      border-bottom-left-radius: 20px;
      border-bottom-right-radius: 20px;
 
-     @media(max-width: 520px) {
+ }
+
+ @media(max-width: 520px) {
+     .ImageContainer {
          height: 200px;
      }
-
-
  }
+
 
  .Image {
      width: 45%;
-
      padding-bottom: 60px;
 
  }
@@ -101,14 +102,14 @@
      gap: 2px;
      font-weight: bold;
      color: #47474D;
-    
+
  }
 
- .inputCheckbox{
-    width: 20px;
-    accent-color: #5F9DF7;
-    color: #FFFFFF;
-    cursor: pointer;
+ .inputCheckbox {
+     width: 20px;
+     accent-color: #5F9DF7;
+     color: #FFFFFF;
+     cursor: pointer;
  }
 
  select {
@@ -125,7 +126,7 @@
      font-size: 18px;
      background: #E1E1E8;
      color: #47474D;
-    cursor: pointer;
+     cursor: pointer;
 
 
 
@@ -198,7 +199,7 @@
      background: #5F9DF7;
      border-radius: 50px;
      color: #ffffff;
-    cursor: pointer;
+     cursor: pointer;
  }
 
  .TitleButton {
